Successfully compiles the old compiler

--- a/notebooks/compiler.ipynb
+++ b/notebooks/compiler.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'split_lines raw_text\\n    \\n    lines = raw_text.split(\\'\\\\n\\')\\n    \\n    while \\'\\' in lines: lines.remove(\\'\\')\\n    return lines\\n\\ngroup_defs lines\\n\\n    # somehow group the lines together to resemble definitions\\n    # look for return statement?\\n    chunks = []\\n    \\n    chunk = []\\n    \\n    print(lines)\\n    for line in lines:\\n        chunk.append(line)\\n        \\n        if (\\'return\\' in line):\\n            chunks.append(chunk)\\n            chunk = []\\n    return chunks\\n            \\ncompile_defs chunks\\n    \\n    for i, lines in enumerate(chunks):\\n    \\n        # change arguments so that they are comma seperated\\n        tokens = lines[0].split(\\' \\')\\n\\n        name = tokens[0]\\n        args = \\',\\'.join(tokens[1:])\\n\\n        lines[0] = \"def \" + name + \"(\" + args + \"):\"\\n        \\n        chunks[i] = lines\\n    return chunks\\n\\njoin_lines chunks\\n    \\n    result = []\\n    for lines in chunks:\\n        result.append(\\'\\\\n\\'.join(lines))\\n    return \\'\\\\n\\'.join(result)'"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "split_lines raw_text\n",
+      "    \n",
+      "    lines = raw_text.split('\\n')\n",
+      "    \n",
+      "    while '' in lines: lines.remove('')\n",
+      "    return lines\n",
+      "\n",
+      "group_defs lines\n",
+      "\n",
+      "    # somehow group the lines together to resemble definitions\n",
+      "    # look for return statement?\n",
+      "    chunks = []\n",
+      "    \n",
+      "    chunk = []\n",
+      "    \n",
+      "    print(lines)\n",
+      "    for line in lines:\n",
+      "        chunk.append(line)\n",
+      "        \n",
+      "        if ('return' in line):\n",
+      "            chunks.append(chunk)\n",
+      "            chunk = []\n",
+      "    return chunks\n",
+      "\n",
+      "compile_defs chunks\n",
+      "    \n",
+      "    for i, lines in enumerate(chunks):\n",
+      "    \n",
+      "        # change arguments so that they are comma seperated\n",
+      "        tokens = lines[0].split(' ')\n",
+      "\n",
+      "        name = tokens[0]\n",
+      "        args = ','.join(tokens[1:])\n",
+      "\n",
+      "        lines[0] = \"def \" + name + \"(\" + args + \"):\"\n",
+      "        \n",
+      "        chunks[i] = lines\n",
+      "    return chunks\n",
+      "\n",
+      "join_lines chunks\n",
+      "    \n",
+      "    result = []\n",
+      "    for lines in chunks:\n",
+      "        result.append('\\n'.join(lines))\n",
+      "    return '\\n'.join(result)\n"
+     ]
     }
    ],
    "source": [
-    "sample"
+    "print(sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,13 +102,14 @@
     "    \n",
     "    chunk = []\n",
     "    \n",
-    "    print(lines)\n",
     "    for line in lines:\n",
     "        chunk.append(line)\n",
     "        \n",
-    "        if ('return' in line):\n",
+    "        if ('return' in line) and '#' not in line and \"'return'\" not in line:\n",
     "            chunks.append(chunk)\n",
     "            chunk = []\n",
+    "            \n",
+    "    print(chunks)\n",
     "    return chunks\n",
     "            \n",
     "def compile_defs(chunks):\n",
@@ -88,21 +130,32 @@
     "def join_lines(chunks):\n",
     "    \n",
     "    result = []\n",
+    "    \n",
+    "    for lines in chunks:\n",
+    "        lines.append('\\n')\n",
+    "    \n",
     "    for lines in chunks:\n",
     "        result.append('\\n'.join(lines))\n",
     "    return '\\n'.join(result)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write awesome syntax highlighter here that outputs the colors for the python code to make it more legible"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['split_lines raw_text', '    ', \"    lines = raw_text.split('\\\\n')\", '    ', \"    while '' in lines: lines.remove('')\", '    return lines', 'group_defs lines', '    # somehow group the lines together to resemble definitions', '    # look for return statement?', '    chunks = []', '    ', '    chunk = []', '    ', '    print(lines)', '    for line in lines:', '        chunk.append(line)', '        ', \"        if ('return' in line):\", '            chunks.append(chunk)', '            chunk = []', '    return chunks', '            ', 'compile_defs chunks', '    ', '    for i, lines in enumerate(chunks):', '    ', '        # change arguments so that they are comma seperated', \"        tokens = lines[0].split(' ')\", '        name = tokens[0]', \"        args = ','.join(tokens[1:])\", '        lines[0] = \"def \" + name + \"(\" + args + \"):\"', '        ', '        chunks[i] = lines', '    return chunks', 'join_lines chunks', '    ', '    result = []', '    for lines in chunks:', \"        result.append('\\\\n'.join(lines))\", \"    return '\\\\n'.join(result)\"]\n",
+      "[['split_lines raw_text', '    ', \"    lines = raw_text.split('\\\\n')\", '    ', \"    while '' in lines: lines.remove('')\", '    return lines'], ['group_defs lines', '    # somehow group the lines together to resemble definitions', '    # look for return statement?', '    chunks = []', '    ', '    chunk = []', '    ', '    print(lines)', '    for line in lines:', '        chunk.append(line)', '        ', \"        if ('return' in line):\", '            chunks.append(chunk)', '            chunk = []', '    return chunks'], ['compile_defs chunks', '    ', '    for i, lines in enumerate(chunks):', '    ', '        # change arguments so that they are comma seperated', \"        tokens = lines[0].split(' ')\", '        name = tokens[0]', \"        args = ','.join(tokens[1:])\", '        lines[0] = \"def \" + name + \"(\" + args + \"):\"', '        ', '        chunks[i] = lines', '    return chunks'], ['join_lines chunks', '    ', '    result = []', '    for lines in chunks:', \"        result.append('\\\\n'.join(lines))\", \"    return '\\\\n'.join(result)\"]]\n",
       "\n",
       "\n",
       "def split_lines(raw_text):\n",
@@ -111,10 +164,12 @@
       "    \n",
       "    while '' in lines: lines.remove('')\n",
       "    return lines\n",
+      "\n",
+      "\n",
       "def group_defs(lines):\n",
       "    # somehow group the lines together to resemble definitions\n",
       "    # look for return statement?\n",
-      "def (,,,chunks,=,[]):\n",
+      "    chunks = []\n",
       "    \n",
       "    chunk = []\n",
       "    \n",
@@ -123,11 +178,12 @@
       "        chunk.append(line)\n",
       "        \n",
       "        if ('return' in line):\n",
-      "def (,,,,,,,,,,,chunks.append(chunk)):\n",
+      "            chunks.append(chunk)\n",
       "            chunk = []\n",
       "    return chunks\n",
-      "def (,,,,,,,,,,,):\n",
-      "compile_defs chunks\n",
+      "\n",
+      "\n",
+      "def compile_defs(chunks):\n",
       "    \n",
       "    for i, lines in enumerate(chunks):\n",
       "    \n",
@@ -139,12 +195,16 @@
       "        \n",
       "        chunks[i] = lines\n",
       "    return chunks\n",
+      "\n",
+      "\n",
       "def join_lines(chunks):\n",
       "    \n",
       "    result = []\n",
       "    for lines in chunks:\n",
       "        result.append('\\n'.join(lines))\n",
-      "    return '\\n'.join(result)\n"
+      "    return '\\n'.join(result)\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -162,6 +222,13 @@
     "print('\\n')\n",
     "print(code)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
