Added a pretty print function to make viewing results easier

--- a/notebooks/compiler.ipynb
+++ b/notebooks/compiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "            chunks.append(chunk)\n",
     "            chunk = []\n",
     "            \n",
-    "    print(chunks)\n",
+    "#     print(chunks)\n",
     "    return chunks\n",
     "            \n",
     "def compile_defs(chunks):\n",
@@ -148,64 +148,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "def pretty_print(text):\n",
+    "    display(Markdown(\"```python\\n\" + text + \"\\n```\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['split_lines raw_text', '    ', \"    lines = raw_text.split('\\\\n')\", '    ', \"    while '' in lines: lines.remove('')\", '    return lines'], ['group_defs lines', '    # somehow group the lines together to resemble definitions', '    # look for return statement?', '    chunks = []', '    ', '    chunk = []', '    ', '    print(lines)', '    for line in lines:', '        chunk.append(line)', '        ', \"        if ('return' in line):\", '            chunks.append(chunk)', '            chunk = []', '    return chunks'], ['compile_defs chunks', '    ', '    for i, lines in enumerate(chunks):', '    ', '        # change arguments so that they are comma seperated', \"        tokens = lines[0].split(' ')\", '        name = tokens[0]', \"        args = ','.join(tokens[1:])\", '        lines[0] = \"def \" + name + \"(\" + args + \"):\"', '        ', '        chunks[i] = lines', '    return chunks'], ['join_lines chunks', '    ', '    result = []', '    for lines in chunks:', \"        result.append('\\\\n'.join(lines))\", \"    return '\\\\n'.join(result)\"]]\n",
-      "\n",
-      "\n",
-      "def split_lines(raw_text):\n",
-      "    \n",
-      "    lines = raw_text.split('\\n')\n",
-      "    \n",
-      "    while '' in lines: lines.remove('')\n",
-      "    return lines\n",
-      "\n",
-      "\n",
-      "def group_defs(lines):\n",
-      "    # somehow group the lines together to resemble definitions\n",
-      "    # look for return statement?\n",
-      "    chunks = []\n",
-      "    \n",
-      "    chunk = []\n",
-      "    \n",
-      "    print(lines)\n",
-      "    for line in lines:\n",
-      "        chunk.append(line)\n",
-      "        \n",
-      "        if ('return' in line):\n",
-      "            chunks.append(chunk)\n",
-      "            chunk = []\n",
-      "    return chunks\n",
-      "\n",
-      "\n",
-      "def compile_defs(chunks):\n",
-      "    \n",
-      "    for i, lines in enumerate(chunks):\n",
-      "    \n",
-      "        # change arguments so that they are comma seperated\n",
-      "        tokens = lines[0].split(' ')\n",
-      "        name = tokens[0]\n",
-      "        args = ','.join(tokens[1:])\n",
-      "        lines[0] = \"def \" + name + \"(\" + args + \"):\"\n",
-      "        \n",
-      "        chunks[i] = lines\n",
-      "    return chunks\n",
-      "\n",
-      "\n",
-      "def join_lines(chunks):\n",
-      "    \n",
-      "    result = []\n",
-      "    for lines in chunks:\n",
-      "        result.append('\\n'.join(lines))\n",
-      "    return '\\n'.join(result)\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/markdown": [
+       "**Generated code:**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def split_lines(raw_text):\n",
+       "    \n",
+       "    lines = raw_text.split('\\n')\n",
+       "    \n",
+       "    while '' in lines: lines.remove('')\n",
+       "    return lines\n",
+       "\n",
+       "\n",
+       "def group_defs(lines):\n",
+       "    # somehow group the lines together to resemble definitions\n",
+       "    # look for return statement?\n",
+       "    chunks = []\n",
+       "    \n",
+       "    chunk = []\n",
+       "    \n",
+       "    print(lines)\n",
+       "    for line in lines:\n",
+       "        chunk.append(line)\n",
+       "        \n",
+       "        if ('return' in line):\n",
+       "            chunks.append(chunk)\n",
+       "            chunk = []\n",
+       "    return chunks\n",
+       "\n",
+       "\n",
+       "def compile_defs(chunks):\n",
+       "    \n",
+       "    for i, lines in enumerate(chunks):\n",
+       "    \n",
+       "        # change arguments so that they are comma seperated\n",
+       "        tokens = lines[0].split(' ')\n",
+       "        name = tokens[0]\n",
+       "        args = ','.join(tokens[1:])\n",
+       "        lines[0] = \"def \" + name + \"(\" + args + \"):\"\n",
+       "        \n",
+       "        chunks[i] = lines\n",
+       "    return chunks\n",
+       "\n",
+       "\n",
+       "def join_lines(chunks):\n",
+       "    \n",
+       "    result = []\n",
+       "    for lines in chunks:\n",
+       "        result.append('\\n'.join(lines))\n",
+       "    return '\\n'.join(result)\n",
+       "\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -219,8 +247,8 @@
     "# code = join_lines(compile_defs(split_lines(sample)))\n",
     "\n",
     "code = compiler.open(sample)\n",
-    "print('\\n')\n",
-    "print(code)"
+    "display(Markdown('**Generated code:**'))\n",
+    "pretty_print(code)"
    ]
   },
   {
