Added function to import runtime

--- a/notebooks/compiler.ipynb
+++ b/notebooks/compiler.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,11 @@
     "    \n",
     "    for lines in chunks:\n",
     "        result.append('\\n'.join(lines))\n",
-    "    return '\\n'.join(result)"
+    "    return '\\n'.join(result)\n",
+    "\n",
+    "# change this so that it reduces conflicts something like import pipe as __pipe__\n",
+    "def import_pipe(result):\n",
+    "    return \"import pipe as __pipe__\\n\\n\" + result"
    ]
   },
   {
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +183,8 @@
      "data": {
       "text/markdown": [
        "```python\n",
+       "import pipe as __pipe__\n",
+       "\n",
        "def split_lines(raw_text):\n",
        "    \n",
        "    lines = raw_text.split('\\n')\n",
@@ -241,7 +247,8 @@
     "    split_lines,\n",
     "    group_defs,\n",
     "    compile_defs,\n",
-    "    join_lines\n",
+    "    join_lines,\n",
+    "    import_pipe\n",
     ")\n",
     "\n",
     "# code = join_lines(compile_defs(split_lines(sample)))\n",
