renamed external to check

--- a/notebooks/runtime upgrade.ipynb
+++ b/notebooks/runtime upgrade.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "# serves as a marker for caching system\n",
     "# during run check to see for any steps with the __name__ is_external from module pipe mark index\n",
-    "def external(step):\n",
+    "def check(step):\n",
     "    def is_external(data):\n",
     "        return step(data)\n",
     "    return is_external"
