Reusing my other libraries and extending them, made pipe subclassing possible

--- a/notebooks/runtime upgrade.ipynb
+++ b/notebooks/runtime upgrade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,9 @@
     "# setting to 0 disables it\n",
     "\n",
     "class Result_Cache:\n",
+    "    \n",
+    "    __slots__ = (\"max_size\", \"size\", \"results\", \"to_replace\")\n",
+    "    \n",
     "    def __init__(self, max_size):\n",
     "        self.max_size = max_size\n",
     "        self.size = 0\n",
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,21 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import inspect\n",
-    "from sys import version_info\n",
-    "\n",
-    "def resolve_get_args():\n",
-    "    if(version_info[0] == 2):\n",
-    "        return inspect.getargspec\n",
-    "    else:\n",
-    "        return inspect.getfullargspec\n",
-    "\n",
+    "import cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from safe import resolve_get_args\n",
     "\n",
     "class Pipe:\n",
+    "    \n",
+    "#     slots to make things more efficent\n",
+    "    __slots__=(\"steps\", \"name\", \"start_value\")\n",
     "    \n",
     "    def __init__(self, *steps, **kwargs):\n",
     "        self.name = kwargs.get(\"name\", None)\n",
@@ -162,7 +169,10 @@
     "            elif num_args > 1:\n",
     "                return step(*data)\n",
     "            \n",
-    "            return step()\n",
+    "            if(callable(step)):\n",
+    "                return step()\n",
+    "            else:\n",
+    "                return step\n",
     "        \n",
     "        prev_result = None\n",
     "        get_args = resolve_get_args()\n",
@@ -173,13 +183,15 @@
     "            else:\n",
     "                print(\"WARNING! you put a raw value at the top of your pipe and you put \" + str(data) + \" in the opening of the pipe the value at the start of the pipe has been overwritten by the passed in value. You may want to get rid of that value at the top of the pipe to get rid of this message\\n\")\n",
     "            \n",
-    "    \n",
-    "        if data != None:\n",
-    "            \n",
-    "            prev_result = get_result(self.steps[0], data)\n",
-    "        \n",
+    "        if(len(self.steps)> 0):\n",
+    "            if data != None:\n",
+    "\n",
+    "                prev_result = get_result(self.steps[0], data)\n",
+    "\n",
+    "            else:\n",
+    "                prev_result = self.steps[0]()\n",
     "        else:\n",
-    "            prev_result = self.steps[0]()\n",
+    "            return data\n",
     "     \n",
     "        for step in self.steps[1:]:\n",
     "            prev_result = get_result(step, prev_result)\n",
@@ -195,7 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pipe import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,13 +230,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "hideOutput": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hi'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test.open(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# testing pipe caching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep\n",
+    "\n",
+    "def long_method():\n",
+    "    sleep(10)\n",
+    "    return \"hello\"\n",
+    "\n",
+    "# test2 works beautifully, no idea why must be binding the cache to the pipe or something\n",
+    "test2 = Pipe(\n",
+    "            cache.Cache(long_method).get\n",
+    "        )\n",
+    "\n",
+    "# test 3 returns a cache cus why not\n",
+    "\n",
+    "test3 = Pipe(\n",
+    "            lambda : cache.Cache(long_method)\n",
+    "        )\n",
+    "\n",
+    "test4 = Pipe(\n",
+    "            long_method\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = test3.open()\n",
+    "temp.get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_cache = cache.Cache(test4.open)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_cache.get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING! you put a raw value at the top of your pipe and you put seniorita in the opening of the pipe the value at the start of the pipe has been overwritten by the passed in value. You may want to get rid of that value at the top of the pipe to get rid of this message\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'seniorita'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing speed\n",
+    "\n",
+    "Pipe(\n",
+    "    \"hola\"\n",
+    ").open(\"seniorita\")"
    ]
   },
   {
