Migrated test related notebooks from pythonmaster project

--- a/notebooks/runtime upgrade.ipynb
+++ b/notebooks/runtime upgrade.ipynb
@@ -487,6 +487,306 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# creating an upgraded stream function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "goals: \n",
+    "1. make the tasks transparent for things like test\n",
+    "2. make it fast\n",
+    "3. make it more memory effecient by assuming the supplied list is immutable and use a generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pipe import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'pipe' from 'pipe.py'>"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pipe\n",
+    "reload(pipe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mutable_stream = stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a run function, stream function will return the run function for the stream object\n",
+    "\n",
+    "class __Stream(object):\n",
+    "    __slots__ = (\"pipe\")\n",
+    "    \n",
+    "    def __init__(self, *steps):\n",
+    "        self.pipe = Pipe(*steps)\n",
+    "    \n",
+    "    def run(self, data):\n",
+    "\n",
+    "        for item in data:\n",
+    "            yield self.pipe.open(item)\n",
+    "            \n",
+    "#         while(len(data) > 0):\n",
+    "\n",
+    "#             result = self.pipe.open(data[0])\n",
+    "#             del data[0]\n",
+    "\n",
+    "#             yield result\n",
+    "\n",
+    "            \n",
+    "# old stream becomes mutable_stream\n",
+    "def stream(*steps):\n",
+    "    return __Stream(*steps).run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is how we get the steps out of the stream for testing now might cause issues in python 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<function __main__.hi>]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stream(hi).__self__.pipe.steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hi(message):\n",
+    "    return message + \"hi\"\n",
+    "    \n",
+    "temp = [\"be\", \"ro\", \"me\"]\n",
+    "streamed = stream(hi)(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp2 = [\"be\", \"ro\", \"me\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 26.2 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit mutable_stream(hi)(temp2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = Pipe(\n",
+    "        mutable_stream(hi)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 34.3 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit test.open([\"be\", \"ro\", \"me\"],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "behi ['ro', 'me']\n",
+      "rohi ['me']\n",
+      "mehi []\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in streamed:\n",
+    "#     continue\n",
+    "    print item, temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# useful? decide later if it should be in pipe lib probs not, they can use a mutable stream if they don't like generators\n",
+    "def aggregate(gen):\n",
+    "    return list(gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def speak(data):\n",
+    "    return list(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the equivalent thing to older mutable stream, takes longer to process by 10 microseconds also cannot support\n",
+    "# having a constant at the top of the pipe as it gets destroyed after the first run, or you have to assume it runs\n",
+    "# only once after declaration, should be more memory effecient however and provide a faster way to process things than \n",
+    "# dask since its all in memory however the initial dataset has to fit in memory and will then be drained whilst\n",
+    "# its running\n",
+    "\n",
+    "test = Pipe(\n",
+    "    stream(\n",
+    "        hi\n",
+    "    ),\n",
+    "    speak\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# debating if this upgrade is worth it since it makes things run slower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hmmmm runs slightly faster without delete command, put this idea on hold for now and come back later once\n",
+    "# all goals can be met"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 6.32 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 39.5 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit test.open([\"be\", \"ro\", \"me\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Javascript"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider transpiling existing code using my own translator or a open source one\n",
+    "\n",
+    "Consider writing as seperate library to handle event streams, make a leaner runtime etc thanks to javascript niceties"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
